--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-  <meta http-equiv="refresh" content="0; URL=178.210.241.77" />
+  <meta http-equiv="refresh" content="0; URL=http://178.210.241.77:8080" />
 </head>
 <body>
   <p>If you are not redirected in five seconds, <a href="https://www.bitdegree.org/">click here</a>.</p>
