--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
   <meta http-equiv="refresh" content="0; URL=http://178.210.241.77:8080" />
 </head>
 <body>
-  <p>If you are not redirected in five seconds, <a href="https://www.bitdegree.org/">click here</a>.</p>
+  <p>If you are not redirected in five seconds, <a href="http://178.210.241.77:8080">click here</a>.</p>
 </body>
