--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
-  <meta http-equiv="refresh" content="0; URL=http://178.210.241.77:8080" />
+  <meta http-equiv="refresh" content="0; URL=https://178.210.241.77" />
 </head>
 <body>
-  <p>If you are not redirected in five seconds, <a href="http://178.210.241.77:8080">click here</a>.</p>
+  <p>If you are not redirected in five seconds, <a href="https://178.210.241.77">click here</a>.</p>
 </body>
